update the memory allocated to tests