@@ -756,6 +756,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M7</version>
 					<configuration>
+                        <argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m</argLine>
                         <includes>
 							<include>**/*Test.java</include>
 						</includes>
